--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon app"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -19,5 +20,8 @@
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
