--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon app"
+    "start": "node ./app.js",
+    "dev": "nodemon app"
   },
   "dependencies": {
     "axios": "^1.6.0",
