--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js",
+    "start": "cross-env NODE_ENV=production PORT=8080 node app.js",
     "dev": "nodemon app"
   },
   "dependencies": {
     "axios": "^1.6.0",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
