--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=production PORT=3000 node app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
     "dev": "nodemon app"
   },
   "dependencies": {
