--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js --host 0.0.0.0 --port 8080",
+    "start": "cross-env NODE_ENV=production node app.js --host 0.0.0.0",
     "dev": "nodemon app"
   },
   "dependencies": {
