--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
+    "node-schedule": "^2.1.1",
     "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
