--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js --host 0.0.0.0",
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "build:server": "babel src -d build"
   },
   "dependencies": {
+    "@babel/cli": "^7.23.9",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -18,9 +20,10 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.2",
     "node-schedule": "^2.1.1",
     "passport-kakao": "^1.0.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.1"
