--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport-kakao": "^1.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "regenerator-runtime": "^0.14.1",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.1"
